<resources>
    <string name="app_name">Calculator</string>
    <string name="clear">C</string>
    <string name="mod">%</string>
    <string name="division">/</string>
    <string name="bracket_start">(</string>
    <string name="bracket_end">)</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">x</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="subtraction">-</string>
    <string name="pow">^</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="add">+</string>
    <string name="square">√</string>
    <string name="zero">0</string>
    <string name="delete_button">delete button</string>
    <string name="dot">.</string>
    <string name="calculate">=</string>
    <string name="history_button">History button</string>
    <string name="clear_button">Clear button</string>
</resources>