<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/history_button"
        android:src="@drawable/history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/krona_one"
        android:lines="2"
        android:maxLines="2"
        android:paddingHorizontal="8dp"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/history" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/krona_one"
        android:lines="1"
        android:maxLines="1"
        android:paddingHorizontal="8dp"
        android:textAlignment="textEnd"
        android:textColor="@color/result_text"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input" />

    <GridLayout
        android:id="@+id/button_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:columnCount="5"
        android:rowCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButtonOperand"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="clearAll"
            android:text="@string/clear" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButtonOperand"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="onOperandClick"
            android:text="@string/mod" />

        <ImageButton
            style="@style/CalculatorButtonOperand"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:contentDescription="@string/delete_button"
            android:onClick="onBackSpaceClick"
            android:src="@drawable/delete" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButtonOperand"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="onOperandClick"
            android:text="@string/division" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButtonOperand"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="onBracketClick"
            android:text="@string/bracket_start" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButtonNumber"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="onNumberButtonClick"
            android:text="@string/seven" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButtonNumber"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="onNumberButtonClick"
            android:text="@string/eight" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButtonNumber"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="onNumberButtonClick"
            android:text="@string/nine" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButtonOperand"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="onOperandClick"
            android:text="@string/multiply" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButtonOperand"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="onBracketClick"
            android:text="@string/bracket_end" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButtonNumber"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="onNumberButtonClick"
            android:text="@string/four" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButtonNumber"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="onNumberButtonClick"
            android:text="@string/five" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButtonNumber"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="onNumberButtonClick"
            android:text="@string/six" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButtonOperand"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="onOperandClick"
            android:text="@string/subtraction" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButtonOperand"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="onOperandClick"
            android:text="@string/pow" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButtonNumber"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="onNumberButtonClick"
            android:text="@string/one" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButtonNumber"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="onNumberButtonClick"
            android:text="@string/two" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButtonNumber"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="onNumberButtonClick"
            android:text="@string/three" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButtonOperand"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="onOperandClick"
            android:text="@string/add" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButtonOperand"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="onOperandClick"
            android:text="@string/square" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButtonNumber"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="onNumberButtonClick"
            android:text="@string/zero" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButtonNumber"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="onDotClick"
            android:text="@string/dot" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButtonResult"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="@dimen/button_margin"
            android:onClick="onResult"
            android:text="@string/calculate" />
    </GridLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historyRV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/button_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_layout"
        app:layout_constraintWidth_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>